setting up tables where the data will go

--- a/crystal-d_codetest/public/index.html
+++ b/crystal-d_codetest/public/index.html
@@ -5,8 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PHP Code Test</title>
+    <script src="vendors/jQuery.js"></script>
+    <script src="scripts/client.js"></script>
+    <link rel="stylesheet" href="vendors/bootstrap.min.css" />
+    <link rel="stylesheet" href="scripts/styles/style.css" />
 </head>
 <body>
-    
+    <header>
+        <h1>
+            Crystal-D Employee Information List
+        </h1>
+    </header>
+    <main>
+        <div>
+            <table class="table table-striped">
+                <thead class="thead-dark">
+                    <tr>
+                        <th scope="col">Name</th>
+                        <th scope="col">Height</th>
+                        <th scope="col">Date of Birth</th>
+                        <th scope="col">Hobby</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>for</td>
+                        <td>loop</td>
+                        <td>goes</td>
+                        <td>here</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </main>
 </body>
 </html>
